Fixed layout issues

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,7 +70,7 @@ h1 {
 
 .playerOneCardBorder, .playerTwoCardBorder {
     border-style: solid;
-    border-width: 2px;
+    border-width: 4px;
     border-radius: 3px;
 }
 
@@ -134,7 +134,7 @@ h1 {
 .grid {
     width: 100%;
     flex-wrap: wrap;
-    margin: 60px auto;
+    margin: auto;
 }
 
 .grid img {
@@ -188,8 +188,7 @@ h1 {
 
 .data {
     display: flex;
-    justify-content: space-between;
-    padding: 20px 30px;
+    padding: 10px 15px;
     font-size: 23px;
 }
 
